// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabs props display can be condensed 1`] = `
<div
  class="euiTabs euiTabs--condensed"
  role="tablist"
/>
`;

exports[`EuiTabs props expand is rendered 1`] = `
<div
  class="euiTabs euiTabs--expand"
  role="tablist"
/>
`;

exports[`EuiTabs props size can be small 1`] = `
<div
  class="euiTabs euiTabs--small"
  role="tablist"
/>
`;

exports[`EuiTabs renders 1`] = `
<div
  aria-label="aria-label"
  class="euiTabs testClass1 testClass2"
  data-test-subj="test subject string"
  role="tablist"
/>
`;
